--- a/ValidationAndError/ValidationAndError.csproj
+++ b/ValidationAndError/ValidationAndError.csproj
@@ -6,12 +6,14 @@
     <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <NoWarn>$(NoWarn);1591</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.2.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NSwag.MSBuild" Version="13.7.4">
@@ -22,8 +24,16 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.1" />
   </ItemGroup>
-  <!--
+
+  <!--<Target Name="NSwag" AfterTargets="Build">
+    <Exec Command="$(NSwagExe) webapi2swagger /assembly:bin/Debug/netcoreapp3.1/ValidationAndError.dll /output:ValidationAndError.json" />
+  </Target>-->
+
   <Target Name="NSwag" AfterTargets="Build">
-    <Exec Command="$(NSwagExe) webapi2swagger /assembly:bin/ValidationAndError.dll /output:ValidationAndError.json" />
-  </Target> -->
+    <Exec Command="$(NSwagExe_Core31) run nswag.json" />
+  </Target>
+  <!--<Target Name="NSwag" AfterTargets="Build">
+    <Exec Command="$(NSwagExe_Core31) aspnetcore2openapi /assembly:$(TargetDir)ValidationAndError.dll /output:swagger.json" />
+    <Exec Command="$(NSwagExe_Core31) openapi2csclient /input:swagger.json /output:Scripts/Client.cs" />
+  </Target>-->
 </Project>
